Issue #19176: Fixed doctype() related bugs in C implementation of ElementTree. A deprecation warning no longer issued by XMLParser subclass with default doctype() method.  Direct call of doctype() now issues a warning.  Parser's doctype() now is not called if target's doctype() is called.  Based on patch by Martin Panter.